<?xml version="1.0"?>
<package>
  <name>instructor_plugins</name>
  <version>0.0.0</version>
  <description>A set of beetree plugins for NRI/instructor</description>
  <maintainer email="futureneer@gmail.com">KelGuerin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>beetree</build_depend>
  <build_depend>instructor_core</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>beetree</run_depend>
  <run_depend>instructor_core</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

    <!-- BASIC ACTION COMMANDS -->
    <instructor plugin="instructor.NodeActionSleepGUI"
      type="ACTION"
      group="TIMING"
      description="Sleep Action"
      cases="baseline drvk"
      name="Sleep"/>
    <instructor plugin="instructor.NodeActionWaypointGUI"
      type="ACTION"
      group="ROBOT"
      description="Waypoint Action"
      cases="baseline"
      name="Move to Waypoint"/>
    <instructor plugin="instructor.MoveToHomeGUI"
      type="ACTION"
      group="ROBOT"
      description="Home Waypoint Action"
      cases="baseline"
      name="Move to Home"/>
    <instructor plugin="instructor.NodeActionRelativeWaypointGUI"
      type="ACTION"
      group="ROBOT"
      description="Instructor Relative Waypoint"
      cases="perception"
      name="Move Relative"/>
    <instructor plugin="instructor.NodePlanWaypointGUI"
      type="TASK"
      group="MOTION PLANNING"
      description="Instructor Plan to Waypoint Action"
      cases="planning"
      name="Plan to Waypoint"/>
    <instructor plugin="instructor.PlanToHomeGUI"
      type="TASK"
      group="MOTION PLANNING"
      description="Instructor Plan to Home Action"
      cases="planning"
      name="Plan to Home"/>
    <instructor plugin="instructor.NodePlanRelativeWaypointGUI"
      type="TASK" group="MOTION PLANNING"
      description="Instructor Plan to Relative Waypoint"
      cases=""
      name="Plan Relative"/>

    <!-- BASIC GRASPING COMMANDS -->
    <instructor plugin="instructor.NodeActionSGripperOpenGUI"
      type="ACTION"
      group="GRIPPER"
      description="Open Gripper"
      cases="baseline"
      name="Open Gripper"/>
    <instructor plugin="instructor.NodeActionSGripperCloseGUI"
      type="ACTION"
      group="GRIPPER"
      description="Close Gripper"
      cases="baseline"
      name="Close Gripper"/>

    <!-- GRASPING MODE COMMANDS -->
    <instructor plugin="instructor.NodeActionSGripperBasicModeGUI"
      type="ACTION"
      group="GRASP MODE"
      description="Switch to Basic Grasp Mode"
      cases=""
      name="Basic Grasp"/>
    <instructor plugin="instructor.NodeActionSGripperScissorModeGUI"
      type="ACTION"
      group="GRASP MODE"
      description="Switch to Scissor Grasp Mode"
      cases=""
      name="Scissor Grasp"/>
    <instructor plugin="instructor.NodeActionSGripperWideModeGUI"
      type="ACTION"
      group="GRASP MODE"
      description="Switch tp Wide Grasp Mode"
      cases=""
      name="Wide Grasp"/>
    <instructor plugin="instructor.NodeActionSGripperPinchModeGUI"
      type="ACTION"
      group="GRASP MODE"
      description="Switch to Pinch Grasp Mode"
      cases=""
      name="Pinch Grasp"/>

    <!-- SMART MOVE OPERATIONS -->
    <instructor plugin="instructor.NodeActionSmartmoveGUI"
      type="TASK"
      group="HIGH LEVEL"
      description="Instructor Smart Move"
      cases=""
      name="Smart Move"/>
    <instructor plugin="instructor.NodeActionSmartmoveGraspGUI"
      type="TASK"
      group="HIGH LEVEL"
      description="Smart Grasp"
      cases="smartmove"
      name="Smart Grasp"/>
    <instructor plugin="instructor.NodeActionSmartmoveReleaseGUI"
      type="TASK"
      group="HIGH LEVEL"
      description="Smart Release"
      cases="smartmove"
      name="Smart Release"/>

    <!-- GENERAL KNOWLEDGE OPERATIONS -->
    <instructor plugin="instructor.NodeKnowledgeTestGUI"
      type="CONDITION"
      group="SYSTEM"
      description="Knowledge Test"
      cases=""
      name="Knowledge Test" />
    <instructor plugin="instructor.NodePublishMessageGUI"
      type="CONDITION"
      group="SYSTEM"
      description="publish_message"
      cases=""
      name="Publish Message" />

    <instructor plugin="instructor.NodeWaitForMessageGUI"
      type="CONDITION"
      group="SYSTEM"
      description="wait_message"
      cases=""
      name="Wait For Message"/>

    <instructor plugin="instructor.NodeActionUpdatePlanningSceneGUI"
      type="CONDITION"
      group="SCENE"
      description="update_planning_scene"
      cases=""
      name="Update Scene"/>
    <instructor plugin="instructor.NodeActionQueryGUI"
      type="CONDITION"
      group="SYSTEM"
      description="Waypoint Query"
      cases=""
      name="Query"/>
    <instructor plugin="instructor.DisableCollisionGUI"
      type="CONDITION"
      group="SCENE"
      description="Disable Collision"
      cases="planning"
      name="Disable Collision"/>

    <!-- SP SEGMENTER OPERATIONS -->
    <instructor plugin="instructor.NodeActionDetectObjectsGUI"
      type="CONDITION"
      group="VISION"
      description="sp_segmenter_detect"
      cases="planning,perception"
      name="Detect Objects"/>

  </export>

</package>
