<?xml version="1.0"?>
<package>
  <name>librarian_plugins</name>
  <version>1.5.0</version>
  <description>Set of plugins for Librarian</description>

  <maintainer email="chris.paxton.cs@gmail.com">Chris Paxton</maintainer>
  <author email="chris.paxton.cs@gmail.com">Chris Paxton</author>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/predicator_plugins</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>instructor_core</build_depend>
  <build_depend>librarian_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>instructor_core</run_depend>
  <run_depend>librarian_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

    <!-- Beetree Service Plugins -->
    <instructor plugin="librarian_plugins.LoadParametersGUI" type="SERVICE"
      description="Load parameters to the parameter server from a Librarian file"
      name="Load Parameters Service"/>

    <instructor plugin="librarian_plugins.SaveParameterGUI" type="SERVICE"
      description="Save a parameter to a file"
      name="Save Parameter Service"/>

    <!-- Beetree Query Plugins -->
    <!--<instructor plugin="librarian_plugins.LoadTextFromFileGUI" type="QUERY"
      description="Retrieve the body of a Librarian file"
      name="Load Text Query"/>-->

    <!--<instructor plugin="librarian_plugins.LoadEntryFromFileGUI" type="QUERY"
      description="Retrieve an entry by key from a Librarian YAML file"
      name="Load Entry Query"/>-->

  </export>
</package>
