<?xml version="1.0"?>
<package>
  <name>predicator_plugins</name>
  <version>0.4.0</version>
  <description>Set of beetree plugins for Predicator</description>

  <maintainer email="chris.paxton.cs@gmail.com">Chris Paxton</maintainer>
  <author email="chris.paxton.cs@gmail.com">Chris Paxton</author>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/predicator_plugins</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>beetree</build_depend>
  <build_depend>instructor_core</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>predicator_core</build_depend>
  <build_depend>predicator_msgs</build_depend>
  <run_depend>beetree</run_depend>
  <run_depend>instructor_core</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>predicator_core</run_depend>
  <run_depend>predicator_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

    <!-- Beetree Service Plugins -->
    <!-- <instructor plugin="instructor.NodeServiceSampleGUI" type="SERVICE"
         description="Instructor Sample Service Node"
         name="Service Sample Node"/>-->

    <!-- Beetree Query Plugins -->
    <!-- <instructor plugin="predicator_plugins.NodeQueryClosestObjectGUI" type="QUERY"description="Retrieve identifier for the closest object"name="Closest Object"/> -->
    <!-- Beetree Condition Plugins -->
    <!-- <instructor plugin="predicator_plugins.NodeConditionTestPredicateGUI" type="CONDITION" group="SYSTEM" description="Test to see if a given predicate exists and is true" name="Test Predicate"/> -->
    
  </export>
</package>
