<?xml version="1.0"?>
<package>
  <name>predicator_scene_structure</name>
  <version>0.0.0</version>
  <description>The predicator_scene_structure package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fjonath1@todo.todo">fjonath1</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costar_structure_msgs</build_depend>
  <build_depend>predicator_core</build_depend>
  <build_depend>predicator_msgs</build_depend>
  <run_depend>costar_structure_msgs</run_depend>
  <run_depend>predicator_core</run_depend>
  <run_depend>predicator_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>