<?xml version="1.0"?>
<package>
  <name>costar_robot_msgs</name>
  <version>0.0.0</version>
  <description>The simple_ur_msgs package</description>

  <maintainer email="kguerin2@jhu.edu">Kel Guerin</maintainer>
  <license>BSD</license>
  <author email="kguerin2@jhu.edu">Kel Guerin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
  </export>
</package>
