<?xml version="1.0"?>
<package>
  <name>costar_robot_msgs</name>
  <version>0.4.0</version>
  <description>The costar_robot_msgs package</description>

  <maintainer email="cpaxton3@jhu.edu">Chris Paxton</maintainer>
  <license>BSD</license>
  <author email="cpaxton3@jhu.edu">Chris Paxton</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>predicator_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>predicator_msgs</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
  </export>
</package>
