<?xml version="1.0"?>
<package>
  <name>objrec_hypothesis_msgs</name>
  <version>0.0.0</version>
  <description>The objrec_hypothesis_msgs package</description>

  <maintainer email="fjonath1@todo.todo">fjonath1</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>